# multicontact-api

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  package.xml  setup.cfg
.github/workflows/: nix.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  fwd.hpp  module.cpp
bindings/python/container/: array.hpp  visitor.hpp
bindings/python/geometry/: ellipsoid.cpp  expose-geometry.hpp  linear-cone.cpp  second-order-cone.cpp  second-order-cone.hpp
bindings/python/multicontact_api/: CMakeLists.txt  __init__.py
bindings/python/scenario/: contact-model.cpp  contact-patch.cpp  contact-patch.hpp  contact-phase-humanoid.hpp  contact-phase.cpp  contact-sequence.cpp  contact-sequence.hpp  enums.cpp  enums.hpp  ms-interval.hpp
bindings/python/trajectories/: cubic-hermite-spline.hpp  trajectories.cpp
bindings/python/utils/: base.hpp
examples/: README.md  com_motion_above_feet_COM.cs  com_motion_above_feet_REF.cs  com_motion_above_feet_WB.cs  display_gepetto_gui.py  platforms.cs  platforms_COM.cs  platforms_REF.cs  step_in_place.cs  step_in_place_COM.cs  step_in_place_REF.cs  step_in_place_quasistatic.cs  step_in_place_quasistatic_COM.cs  step_in_place_quasistatic_REF.cs  update_xml.py  walk_20cm.cs  walk_20cm_COM.cs  walk_20cm_REF.cs  walk_20cm_quasistatic.cs  walk_20cm_quasistatic_COM.cs  walk_20cm_quasistatic_REF.cs
examples/previous_versions/: api_0.cs
include/locomote/: CMakeLists.txt
include/locomote/bindings/python/container/: reference-wrapper.hpp
include/locomote/bindings/python/geometry/: ellipsoid.hpp  linear-cone.hpp
include/locomote/bindings/python/scenario/: contact-model-planar.hpp  contact-phase-humanoid.hpp  contact-phase.hpp  contact-sequence.hpp  expose-scenario.hpp
include/locomote/bindings/python/serialization/: archive.hpp
include/locomote/bindings/python/trajectories/: expose-trajectories.hpp
include/locomote/bindings/python/utils/: printable.hpp
include/locomote/container/: ref.hpp
include/locomote/geometry/: ellipsoid.hpp  fwd.hpp  linear-cone.hpp  second-order-cone.hpp
include/locomote/math/: cumsum.hpp  factorial.hpp  nrand.hpp  search.hpp
include/locomote/scenario/: constraint-gmm.hpp  constraint-soc.hpp  constraint.hpp  contact-constraint-planar.hpp  contact-constraint.hpp  contact-model-planar.hpp  contact-patch.hpp  contact-phase-humanoid.hpp  contact-phase.hpp  contact-sequence.hpp  fwd.hpp  ms-interval.hpp
include/locomote/serialization/: aligned-vector.hpp  archive.hpp  eigen-matrix.hpp  fwd.hpp  spatial.hpp  xml.hpp
include/locomote/trajectories/: cubic-hermite-spline.hpp  fwd.hpp
include/multicontact-api/: CMakeLists.txt
include/multicontact-api/bindings/python/: fwd.hpp
include/multicontact-api/bindings/python/container/: array.hpp  reference-wrapper.hpp  visitor.hpp
include/multicontact-api/bindings/python/geometry/: ellipsoid.hpp  expose-geometry.hpp  linear-cone.hpp  second-order-cone.hpp
include/multicontact-api/bindings/python/scenario/: contact-model-planar.hpp  contact-model.hpp  contact-patch.hpp  contact-phase-humanoid.hpp  contact-phase.hpp  contact-sequence.hpp  enums.hpp  expose-scenario.hpp  ms-interval.hpp
include/multicontact-api/bindings/python/serialization/: archive.hpp
include/multicontact-api/bindings/python/trajectories/: cubic-hermite-spline.hpp  expose-trajectories.hpp
include/multicontact-api/bindings/python/utils/: base.hpp  printable.hpp
include/multicontact-api/container/: ref.hpp
include/multicontact-api/geometry/: curve-map.hpp  ellipsoid.hpp  fwd.hpp  linear-cone.hpp  second-order-cone.hpp
include/multicontact-api/math/: cumsum.hpp  factorial.hpp  nrand.hpp  search.hpp
include/multicontact-api/scenario/: constraint-gmm.hpp  constraint-soc.hpp  constraint.hpp  contact-constraint-planar.hpp  contact-constraint.hpp  contact-model-planar.hpp  contact-model.hpp  contact-patch.hpp  contact-patch_old.hpp  contact-phase-humanoid.hpp  contact-phase.hpp  contact-phase_old.hpp  contact-sequence.hpp  fwd.hpp  ms-interval.hpp
include/multicontact-api/serialization/: aligned-vector.hpp  archive.hpp  eigen-matrix.hpp  fwd.hpp  spatial.hpp  xml.hpp
include/multicontact-api/trajectories/: cubic-hermite-spline.hpp  fwd.hpp
notebooks/: 1_basic_usage.ipynb  2_contact_sequence_creation.ipynb  3_load_from_file.ipynb  Basic_usage.ipynb
notebooks/.ipynb_checkpoints/: Basic_usage-checkpoint.ipynb
unittest/: CMakeLists.txt  examples.cpp  geometry.cpp  scenario.cpp  serialization_versionning.cpp  trajectories.cpp
unittest/bindings/python/: geometry.py  stats.py
unittest/python/: CMakeLists.txt  geometry.py  scenario.py  scenario_serialization.py  serialization_examples.py  trivial.py
